5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1691_2195.log
== TEST (2019-05-23 14:39:23) 
-- CODE:
a= int(import("digite o dia, o mês e o ano: "))
dia= a//100000000
print(dia)
-- ERROR:
File "XXXX", line 1
    a= int(import("digite o dia, o mês e o ano: "))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:39:44) 
-- CODE:
a= int(import("digite o dia o mês e o ano: "))
dia= a//100000000
print(dia)
-- ERROR:
File "XXXX", line 1
    a= int(import("digite o dia o mês e o ano: "))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:39:57) 
-- CODE:
a= int(input("digite o dia o mês e o ano: "))
dia= a//100000000
print(dia)
-- ERROR:
File "XXXX", line 1
    a= int(import("digite o dia o mês e o ano: "))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:40:03) 
-- CODE:
a= int(input("digite o dia o mês e o ano: "))
dia= a//100000000
print(dia)
-- ERROR:
File "XXXX", line 1
    a= int(import("digite o dia o mês e o ano: "))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:40:20) 
-- CODE:
a= int(input("digite o dia o mês e o ano: "))
dia= a//100000000
print(dia)
-- ERROR:
File "XXXX", line 1
    a= int(import("digite o dia o mês e o ano: "))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:40:38) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//100000000
print(dia)
-- ERROR:
File "XXXX", line 1
    a= int(import("digite o dia o mês e o ano: "))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:41:05) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
print(dia)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:42:25) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a//10000000%1000000
print(dia)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:42:32) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a//10000000%1000000
print(dia2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:42:53) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a/10000000%1000000
print(dia2)
-- OUTPUT:
1.508199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:43:17) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000
print(dia2)
-- OUTPUT:
5081990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:43:48) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000
print(dia2)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:44:56) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

print(dia+dia2)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:45:23) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

print(dia, dia2)
-- OUTPUT:
1 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:45:41) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

print(dia,dia2)
-- OUTPUT:
1 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:45:51) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

print(dia dia2)
-- ERROR:
File "XXXX", line 5
    print(dia dia2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:45:52) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

print(dia dia2)
-- ERROR:
File "XXXX", line 5
    print(dia dia2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:46:09) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

print(dia, dia2)
-- OUTPUT:
1 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:46:47) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000
dia=dia,dia2
print(dia)
-- OUTPUT:
(1, 5)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:49:33) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
print(mes)
print(mes2)
print(mes,mes2)
-- OUTPUT:
0
8
0 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:53:36) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000

ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10

print(ano)
print(ano2)
print(ano3)
print(ano4)
-- OUTPUT:
1
9
9
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:56:09) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000

ano=a%10000000%1000000%100000%10000//1000, a%10000000%1000000%100000%10000%1000//100, a%10000000%1000000%100000%10000%1000%100//10, a%10000000%1000000%100000%10000%1000%100%10
print(ano)

if()
-- ERROR:
File "XXXX", line 11
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:56:16) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000

ano=a%10000000%1000000%100000%10000//1000, a%10000000%1000000%100000%10000%1000//100, a%10000000%1000000%100000%10000%1000%100//10, a%10000000%1000000%100000%10000%1000%100%10
print(ano)

-- OUTPUT:
(1, 9, 9, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:57:28) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000

ano=(a%10000000%1000000%100000%10000//1000) (a%10000000%1000000%100000%10000%1000//100) (a%10000000%1000000%100000%10000%1000%100//10) (a%10000000%1000000%100000%10000%1000%100%10)
print(ano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    ano=(a%10000000%1000000%100000%10000//1000) (a%10000000%1000000%100000%10000%1000//100) (a%10000000%1000000%100000%10000%1000%100//10) (a%10000000%1000000%100000%10000%1000%100%10)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:58:00) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000

ano=(a%10000000%1000000%100000%10000//1000), (a%10000000%1000000%100000%10000%1000//100), (a%10000000%1000000%100000%10000%1000%100//10), (a%10000000%1000000%100000%10000%1000%100%10)
print(ano)

-- OUTPUT:
(1, 9, 9, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:03:05) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2

ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4

-- OUTPUT:
(1, 9, 9, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:03:53) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano2)
-- OUTPUT:
(0, 8)
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:04:10) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano1)
-- OUTPUT:
(0, 8)
(1, 9, 9, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:07:51) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano1)
if(ano1<"(0,0,0,0)"):
	print(ano1)
else:
	print("ano invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    if(ano1<"(0,0,0,0)"):
TypeError: '<' not supported between instances of 'tuple' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:08:19) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano1)
if(ano1<0,0,0,0):
	print(ano1)
else:
	print("ano invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    if(ano1<0,0,0,0):
TypeError: '<' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:08:24) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano1)
if(ano1<0,0,0,0):
	print(ano1)
else:
	print("ano invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    if(ano1<0,0,0,0):
TypeError: '<' not supported between instances of 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:08:44) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano1)
if(ano1<(0,0,0,0):
	print(ano1)
else:
	print("ano invalido")
-- ERROR:
File "XXXX", line 15
    if(ano1<(0,0,0,0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:08:50) 
-- CODE:
a= int(input("digite o dia o mes e o ano: "))
dia= a//10000000
dia2=a%10000000//1000000

mes=a%10000000%1000000//100000
mes2=a%10000000%1000000%100000//10000
mes1= mes, mes2
print(mes1)
ano=a%10000000%1000000%100000%10000//1000
ano2=a%10000000%1000000%100000%10000%1000//100
ano3=a%10000000%1000000%100000%10000%1000%100//10
ano4=a%10000000%1000000%100000%10000%1000%100%10
ano1=ano, ano2, ano3, ano4
print(ano1)
if(ano1<(0,0,0,0)):
	print(ano1)
else:
	print("ano invalido")
-- OUTPUT:
(0, 8)
(1, 9, 9, 0)
ano invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
